<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/txt_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_account"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/text_color"
        android:textSize="@dimen/H4"
        android:fontFamily="@font/manrope_semibold"/>

    <TextView
        android:id="@+id/txt_enter_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_enter_mobile_proceed"
        app:layout_constraintTop_toBottomOf="@+id/txt_account"
        app:layout_constraintStart_toStartOf="@id/txt_account"
        app:layout_constraintEnd_toEndOf="@id/txt_account"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_color_t30"
        android:textSize="@dimen/regular_text_size"
        android:fontFamily="@font/manrope_semibold"/>

    <LinearLayout
        android:id="@+id/linear_edittext"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/style_edittext"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_enter_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/call_light"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/style_line"/>
        <EditText
            android:id="@+id/edit_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="number"
            android:background="@android:color/transparent"
            android:hint="@string/txt_mobile_number"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_txt_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_edittext"
        android:background="@drawable/style_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>