<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentProfileSetup1">

    <TextView
        android:id="@+id/txt_profile2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/manrope_bold"
        android:textSize="@dimen/title_txt_size"
        android:text="@string/txt_profile_setup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_profile2_desc"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:fontFamily="@font/manrope_regular"
        android:textSize="@dimen/regular_text_size"
        android:text="@string/txt_complete_the_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_profile2_title"/>


    <ImageView
        android:id="@+id/img_profile_setup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profilepic_circleimage"
        app:layout_constraintTop_toBottomOf="@id/txt_profile2_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/txt_profile2_upload_img"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:fontFamily="@font/manrope_regular"
        android:textSize="@dimen/regular_text_size"
        android:text="@string/txt_upload_profile"
        app:layout_constraintTop_toBottomOf="@id/img_profile_setup2"
        app:layout_constraintStart_toStartOf="@id/img_profile_setup2"
        app:layout_constraintEnd_toEndOf="@id/img_profile_setup2"/>

    <LinearLayout
        android:id="@+id/linear_edittext_fullname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/style_edittext"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_profile2_upload_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/profile_light"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/style_line"/>

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/manrope_regular"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:hint="@string/txt_username"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/style_edittext"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/linear_edittext_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/gender_light"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/style_line"/>

        <EditText
            android:id="@+id/edit_Gender"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/manrope_regular"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:hint="@string/txt_gender"
            android:drawableEnd="@drawable/down_arrow"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_edittext_DOB"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/style_edittext"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/linear_edittext_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/bio_light"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/style_line"/>

        <EditText
            android:id="@+id/edit_DOB"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/manrope_regular"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:hint="@string/txt_bio"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
