<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LocationPermissionScreen">

    <ImageView
        android:id="@+id/img_location1"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:src="@drawable/location_permi_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_location1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_view_onboarding_bg"
        app:layout_constraintDimensionRatio="H,430:450">

        <TextView
            android:id="@+id/txt_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="@font/manrope_bold"
            android:textSize="@dimen/H5"
            android:text="@string/txt_allow_access_nlocation" />

       <RelativeLayout
           android:layout_width="320dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp">
        <TextView
            android:id="@+id/txt_location_quotes_line1_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="clip_horizontal"
            android:justificationMode="inter_word"
            android:fontFamily="@font/manrope_regular"
           android:layout_marginStart="10dp"
            android:textSize="@dimen/regular_text_size"
            android:text="•" />
        <TextView
            android:id="@+id/txt_location_quotes_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/manrope_regular"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/regular_text_size"
            android:text="@string/txt_location_line1" />
        <TextView
             android:id="@+id/txt_location_quotes_line2_dot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_location_quotes_line1_dot"
             android:layout_marginTop="43dp"
             android:layout_marginBottom="5dp"
             android:gravity="clip_horizontal"
             android:fontFamily="@font/manrope_regular"
             android:layout_marginStart="10dp"
             android:textSize="@dimen/regular_text_size"
             android:text="•" />
        <TextView
            android:id="@+id/txt_location_quotes_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_location_quotes_line1"
            android:fontFamily="@font/manrope_regular"
            android:layout_marginEnd="30dp"
            android:textAlignment="viewStart"
            android:layout_marginStart="30dp"
            android:textSize="@dimen/regular_text_size"
            android:text="@string/txt_location_line2" />
       </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/txt_btn_dontallow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_allow"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/btn_txt_don_t_allow"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="@dimen/txt_btn_size"
                tools:ignore="TouchTargetSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_allow"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/S19"
                app:cornerRadius="12dp"
                android:textColor="@color/white"
                android:text="@string/btn_txt_allow"
                style="@style/Widget.Material3.Button"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
